--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test Vite App</title>
   <script type="module" crossorigin src="/vite-app-test/index.js"></script>
+  <link rel="modulepreload" crossorigin href="/vite-app-test/assets/vendor-DlsucPhO.js">
 </head>
 
 <body>
