--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test Vite App</title>
+  <title>Test Vite Template</title>
 </head>
 
 <body>
