--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link href="/vite-app-test/assets/favicon-DUzivux-.ico" rel="icon" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test Vite App</title>
+  <title>Test Vite Template</title>
   <script type="module" crossorigin src="/vite-app-test/assets/js/index-DcI7cI8d.js"></script>
   <link rel="modulepreload" crossorigin href="/vite-app-test/assets/js/vendor-common-DlsucPhO.js">
 </head>
